# typical-year-forecasting-electricity-prices

./: Makefile  README.md  challenges.py  pyproject.toml  ty_mean.py
scripts/: challenges.py  motivation.py  ty_mean.py  ty_std.py
ty/: cli.py  data.py  forecast.py  util.py
