[tool.poetry]
name = "ty"
version = "0.1.0"
description = "Simple typical year forecast."
authors = ["Adam Green <adam.green@adgefficiency.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
tabulate = "^0.9.0"
nemdata = "0.2.1"


[tool.poetry.group.develop.dependencies]
ipython = "^8.6.0"
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
